--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
     "@types/node": "^12.0.0",
     "@types/react-dom": "^17.0.9",
     "@types/react-router-dom": "^5.3.0",
+    "axios": "^0.22.0",
+    "highlight.js": "^11.2.0",
     "history": "^5.0.1",
+    "markdown-to-jsx": "^7.1.3",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-ga": "^3.3.0",
